# qcodes-jp

./: .gitignore  .readthedocs.yaml  .requirements.yaml  LICENSE  README.md
docs/: conf.py  pyproject.toml  requiremants.txt
docs/examples/: 15_minutes_to_QCoDeS-JP.ipynb
